src/test/ui/moves/move-into-dead-array-1.nll.stderr
error[E0381]: use of possibly uninitialized variable: `a`
  --> $DIR/move-into-dead-array-1.rs:14:5
   |
LL |     a[i] = d();
   |     ^^^^ use of possibly uninitialized `a`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
